Fixed language issue set blank and type to Data

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1137,7 +1137,7 @@
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
-				<string></string>
+				<data></data>
 				<key>run-efi-updater</key>
 				<string>No</string>
 				<key>ForceDisplayRotationInEFI</key>
