--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1151,7 +1151,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v debug=0x100 keepsyms=1 alcid=1 -wegnoegpu</string>
+				<string>-v debug=0x100 keepsyms=1 alcid=13 alctsel=1 -wegnoegpu</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
