--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1009,7 +1009,7 @@
 			<key>HibernateMode</key>
 			<string>None</string>
 			<key>HideAuxiliary</key>
-			<false/>
+			<true/>
 			<key>LauncherOption</key>
 			<string>Short</string>
 			<key>LauncherPath</key>
