--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1021,7 +1021,7 @@
 			<key>PickerMode</key>
 			<string>External</string>
 			<key>PickerVariant</key>
-			<string>Acidanthera\GoldenGate</string>
+			<string>blackosx\OpenCanopyIconPacks\BOCIP_1_Light</string>
 			<key>PollAppleHotKeys</key>
 			<false/>
 			<key>ShowPicker</key>
